<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RxSample</string>
    <string name="action_settings">Settings</string>
    <string name="skip">skip</string>
    <string name="distinct">distinct</string>
    <string name="last">last</string>
    <string name="takelast">takeLast</string>
    <string name="filter">filter</string>
    <string name="ofType">ofType</string>
    <string name="elementAt">elementAt</string>
  <string name="load_unmodified">load</string>
</resources>
