<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2e4fe"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

          <Button
              android:id="@+id/btnLoadUnmodified"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/load_unmodified"/>

            <Button
                android:id="@+id/btnFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"/>

            <Button
                android:id="@+id/btnTakeLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/takelast"/>

            <Button
                android:id="@+id/btnlLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

          <Button
              android:id="@+id/btnSkip"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/skip"/>

            <Button
                android:id="@+id/btnDistinct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distinct"/>

            <Button
                android:id="@+id/btnOfType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ofType"/>

            <Button
                android:id="@+id/btnElementAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elementAt"/>

        </LinearLayout>
    </LinearLayout>


    <ListView
        android:id="@+id/lvItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="10dp"
        android:listSelector="@android:color/transparent"/>
</LinearLayout>
